--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">UntitledDiscordBot</string>
     <string name="app_title">UDB</string>
     <string name="app_extended_title">Untitled Discord Bot</string>
+    <string name="login_with_discord">Login with Discord</string>
 </resources>
