--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="app_title">UDB</string>
     <string name="app_extended_title">Untitled Discord Bot</string>
     <string name="login_with_discord">Login with Discord</string>
+    <string name="home">Home</string>
+    <string name="settings">Settings</string>
+    <string name="music">Music</string>
+    <string name="commands">Commands</string>
+    <string name="logout">Logout!</string>
 </resources>
