--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="choose_server">Choose server</string>
+    <string name="info_2">Make sure you have manage server permissions and that you are logged into the right account.</string>
+    <string name="info_1">To add this bot to your server, click \"choose server\" above this message then afterwards select it in the \"select server\" bottom shelf menu.</string>
+    <string name="news_and_updates"><![CDATA[News & Updates]]></string>
+    <string name="informations">Information</string>
 </resources>
