Server Selection UI fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="nothing_to_see_here">Nothing to see here\nI\'ll do my best to keep you updated\n\nAfter my prolonged nap</string>
     <string name="logged_in_as">Logged in as</string>
     <string name="log_out">Log Out</string>
+    <string name="not_available">This feature is not yet available.\n\n Gimme some sleep</string>
 </resources>
