Add Server Info Layout Card

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="logged_in_as">Logged in as</string>
     <string name="log_out">Log Out</string>
     <string name="not_available">This feature is not yet available.\n\n Gimme some sleep</string>
+    <string name="server_prefix">Server prefix:</string>
 </resources>
